[gd_scene load_steps=55 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://Player/taur_walk_1.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 10 )
region = Rect2( 0, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 10 )
region = Rect2( 128, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 10 )
region = Rect2( 256, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 10 )
region = Rect2( 384, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 10 )
region = Rect2( 512, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 10 )
region = Rect2( 0, 384, 151, 128 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 10 )
region = Rect2( 151, 384, 151, 128 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 10 )
region = Rect2( 302, 384, 151, 128 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 10 )
region = Rect2( 453, 384, 151, 128 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 10 )
region = Rect2( 604, 384, 151, 128 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 10 )
region = Rect2( 0, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 10 )
region = Rect2( 128, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 10 )
region = Rect2( 256, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 10 )
region = Rect2( 384, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 10 )
region = Rect2( 512, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 10 )
region = Rect2( 0, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 10 )
region = Rect2( 128, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 10 )
region = Rect2( 256, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 10 )
region = Rect2( 384, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 10 )
region = Rect2( 512, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 10 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 10 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 10 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 10 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 10 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 10 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 10 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 10 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 10 )
region = Rect2( 256, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 10 )
region = Rect2( 384, 256, 128, 128 )

[sub_resource type="SpriteFrames" id=88]
animations = [ {
"frames": [ SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ) ],
"loop": true,
"name": "attack_bottom",
"speed": 5.0
}, {
"frames": [ SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ) ],
"loop": true,
"name": "attack_side",
"speed": 5.0
}, {
"frames": [ SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ) ],
"loop": true,
"name": "attack_up",
"speed": 5.0
}, {
"frames": [ SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ) ],
"loop": true,
"name": "walk_bottom",
"speed": 5.0
}, {
"frames": [ SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ) ],
"loop": true,
"name": "walk_side",
"speed": 5.0
}, {
"frames": [ SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.0
height = 6.0

[sub_resource type="CircleShape2D" id=9]
radius = 71.0

[sub_resource type="CircleShape2D" id=10]
radius = 5.0

[sub_resource type="CircleShape2D" id=11]
radius = 5.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 2.38419e-07, -10 )
scale = Vector2( 0.156233, 0.20757 )
frames = SubResource( 88 )
animation = "attack_bottom"
frame = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 6 )
animation = "fly"
playing = true
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 2147483656

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.454902 )
shape = SubResource( 9 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -14 )
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 11 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
